--- a/index.css
+++ b/index.css
@@ -16,8 +16,11 @@
  }
    
         .overlay {
-            height: 100vh;
             width: 100vw;
+            width: calc(var(--vw, 1vw) * 100);
+            height: 100vh;
+            height: calc(var(--vh, 1vh) * 100);
+		position: fixed;
 		overflow: hidden;
         }
 
