--- a/index.css
+++ b/index.css
@@ -22,6 +22,7 @@
 
 		overflow: hidden;
 		text-align: center;
+		position: relative;
         }
 
       
@@ -39,6 +40,12 @@ div.p {
 	font-weight: bold;
 	font-size: 30px;
 	padding: 20px;
+	margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 	
