--- a/index.css
+++ b/index.css
@@ -22,7 +22,9 @@
 
 		overflow: hidden;
 		text-align: center;
-		position: relative;
+		display: flex;
+  justify-content: center;
+  align-items: center;
         }
 
       
@@ -40,12 +42,6 @@
 	font-weight: bold;
 	font-size: 30px;
 	padding: 20px;
-	margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
 }
 
 	
