--- a/index.css
+++ b/index.css
@@ -16,8 +16,8 @@
  }
    
         .overlay {
-            width: 100%;
-            height: 100%;
+            width: 100vw;
+            height: 100vh;
 
 		overflow: hidden;
 		text-align: center;
