--- a/index.css
+++ b/index.css
@@ -20,9 +20,7 @@
             width: calc(var(--vw, 1vw) * 100);
             height: 100vh;
             height: calc(var(--vh, 1vh) * 100);
-		display: flex;
-  justify-content: center;
-  align-items: center;
+		display: fixed;
         }
 
       
