--- a/index.css
+++ b/index.css
@@ -20,6 +20,9 @@
             width: calc(var(--vw, 1vw) * 100);
             height: 100vh;
             height: calc(var(--vh, 1vh) * 100);
+		position: absolute;
+		top:0;
+		left:0;
         }
 
       
