--- a/index.css
+++ b/index.css
@@ -14,8 +14,14 @@
   body {
  overflow: hidden;
  }
-   
-        .overlay {
+.container {
+	width: 100vw;
+            width: calc(var(--vw, 1vw) * 100);
+            height: 100vh;
+            height: calc(var(--vh, 1vh) * 100);
+}
+
+.overlay {
             width: 100vw;
             width: calc(var(--vw, 1vw) * 100);
             height: 100vh;
