--- a/index.css
+++ b/index.css
@@ -15,12 +15,26 @@
  overflow: hidden;
  }
 
+.module {
+  height: 100vh; /* Use vh as a fallback for browsers that do not support Custom Properties */
+  height: calc(var(--vh, 1vh) * 100);
+  margin: 0 auto;
+  width: 100%;
+}
 
+.iFrame_content {
+  width: 100vw;
+	align-items: center;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+	
+}
 
 
       
         
-
+/*
         .iFrame_content {
             width: 100vw;
             width: calc(var(--vw, 1vw) * 100);
@@ -28,7 +42,7 @@
             height: calc(var(--vh, 1vh) * 100);
             
         }
-        
+*/
 
 
 	
